// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render-error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#7300AE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/Logo.png",
      }
    }
    style={
      Object {
        "flex": 3,
        "height": undefined,
        "width": "80%",
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
        },
        Object {
          "color": "white",
          "flex": 0,
          "fontSize": 20,
          "fontWeight": "bold",
          "padding": 20,
          "textAlign": "center",
          "width": "100%",
        },
      ]
    }
  >
    Something went wrong trying to get a classic with every byte.
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 0,
        "elevation": 2,
        "margin": 20,
        "minWidth": 64,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 0.75,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 1.5,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
                "textAlign": "left",
              },
              Array [
                Object {
                  "letterSpacing": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                undefined,
                Object {
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                Object {
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          Try Again!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render-not-started 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#7300AE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/Logo.png",
      }
    }
    style={
      Object {
        "flex": 3,
        "height": undefined,
        "width": "80%",
      }
    }
  />
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
        },
        Object {
          "color": "white",
          "flex": 0,
          "fontSize": 20,
          "fontWeight": "bold",
          "padding": 20,
          "textAlign": "center",
          "width": "100%",
        },
      ]
    }
  >
    We won't be a moment...
  </Text>
</View>
`;

exports[`render-started 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#7300AE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/Logo.png",
      }
    }
    style={
      Object {
        "flex": 3,
        "height": undefined,
        "width": "80%",
      }
    }
  />
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
        },
        Object {
          "color": "white",
          "flex": 0,
          "fontSize": 20,
          "fontWeight": "bold",
          "padding": 20,
          "textAlign": "center",
          "width": "100%",
        },
      ]
    }
  >
    We won't be a moment...
  </Text>
</View>
`;

exports[`render-success 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#7300AE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/Logo.png",
      }
    }
    style={
      Object {
        "flex": 3,
        "height": undefined,
        "width": "80%",
      }
    }
  />
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
        },
        Object {
          "color": "white",
          "flex": 0,
          "fontSize": 20,
          "fontWeight": "bold",
          "padding": 20,
          "textAlign": "center",
          "width": "100%",
        },
      ]
    }
  >
    We won't be a moment...
  </Text>
</View>
`;
